# rules_nodejs

./: package.bzl
examples/angular/src/: tsconfig.json
examples/angular/src/app/: BUILD.bazel  app-routing.module.ts  app.module.ts
examples/angular/src/app/todos/: BUILD.bazel  todos-app.component.html  todos-app.component.ts  todos-app.module.ts
examples/angular/src/lib/todos/: BUILD.bazel  todos.component.html  todos.module.ts
internal/node/: node_repositories.bzl
