load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//:__subpackages__"])

ng_ts_library(
    name = "todos",
    srcs = [
        "todos-app.component.ts",
        "todos-app.module.ts",
    ],
    angular_assets = [
        "todos-app.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/lib/todos",
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
